objects/ASI_CRM_SG_Rate__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>SG CRM: Store Inflation rate and distribution rate</description>
    <fields>
        <fullName>ASI_CRM_SG_Effective_Date__c</fullName>
        <label>Effective Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Rate__c</fullName>
        <label>Rate</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Type__c</fullName>
        <inlineHelpText>Please input &quot;Inflation&quot; or &quot;Distribution&quot;.</inlineHelpText>
        <label>Type</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>ASI CRM SG Rate</label>
</CustomObject>